@@ -1,4 +1,4 @@
 10 filesystems_changed
+20 remove_backup
 30 parted
-40 update-dev
-90 remove_backup
+32 update-dev
