@@ -1,8 +1,17 @@
 partman (10) UNRELEASED; urgency=low
 
-  * Translations:
+  * Anton Zinoviev
+    - Partman doesn't rely any more on partconf-mkfstab to convert devfs
+      devices to normal devices.  A new command map_devfs does this using
+      directly libdebian-installer.  
+    - Add dependency on libdebian-installer4-udeb and build-dependency on
+      libdebian-installer4-dev.
+    - Use 32 instead of 40 as number for update-dev in commit.d to make
+      the room between update-dev and the next script larger.
+    - Use 20 instead of 90 as number for remove_backup in commit.d.
+      Otherwise `undo' can restore invalid partition scheme.
 
- -- Anton Zinoviev <zinoviev@debian.org>  Fri, 13 Feb 2004 09:53:47 +0200
+ -- Anton Zinoviev <zinoviev@debian.org>  Sat, 14 Feb 2004 15:10:33 +0200
 
 partman (9) unstable; urgency=low
 
